# AUGAR

./: .env.example  .gitignore  AUGAR.md  AUGAR.py  BabyAubergine_ArcFleet_Source.py  Data_INDEX_HK_D.parquet  Data_INDEX_UK_D.parquet  LICENSE  MANIFEST.in  README.md  README.zh.md  package.json  pyproject.toml  五行八卦.md  文王卦.md  算命.md  紫薇斗数.md
.github/workflows/: pages.yml
augar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
augar_engine/: __init__.py  backfill_card_translations.py  check_llm_provider.py  cli.py  comparison.py  constants.py  core.py  display.py  entry.py  exports.py  interpreter.py  llm.py  pipeline.py  question.py  schemas.py
augar_engine/api/: __init__.py  app.py
augar_engine/data/: __init__.py  data_processing.py
augar_engine/generators/: __init__.py  astrology.py  base.py  bazi.py  market_pulse.py  tarot.py  wenwang.py  ziwei.py
configs/: augar.chatgpt_oauth.example.json  augar.example.json  defaults.json  llm.json  market_thresholds.json
data/: Data_INDEX_CN_D.parquet  Data_INDEX_US_D.parquet
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
public/data/: index.json
runs/0721aa8ba5c6/: manifest.json
runs/0d6f8a3230ef/: manifest.json
runs/0e5a3aa39156/: manifest.json
runs/10918080f025/: manifest.json
runs/33997809832d/: manifest.json
runs/5c723eb6c516/: manifest.json
runs/662d9afeb892/: manifest.json
runs/887b9b8bc822/: manifest.json
scripts/: check_llm_provider.py  dev.mjs  generate_cards.py
tests/: test_augar.py
(+265 files in other folders)
